[package]
name = "memory"
version = "0.1.0"
authors = ["Danny McClanahan <1305167+cosmicexplorer@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
hashing = { path = "/Users/dmcclanahan/tools/p2/src/rust/engine/hashing", features = ["native-repr"] }
lazy_static = "1"
parking_lot = "0.6"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
bindgen = "0.53.2"
