[package]
name = "memory"
version = "0.1.0"
authors = ["Danny McClanahan <1305167+cosmicexplorer@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bytes = "0.4.5"
hashing = { path = "/Users/dmcclanahan/tools/p2/src/rust/engine/hashing", features = ["native-repr"] }
intrusive-table = { path = "intrusive-table" }
futures01 = { package = "futures", version = "0.1" }
lazy_static = "1"
parking_lot = "0.6"
serde = "1.0"
serde_derive = "1.0"
store = { path = "/Users/dmcclanahan/tools/p2/src/rust/engine/fs/store" }
task_executor = { path = "/Users/dmcclanahan/tools/p2/src/rust/engine/task_executor" }
uuid = { version = "0.8", features = ["v4"] }
workunit_store = { path = "/Users/dmcclanahan/tools/p2/src/rust/engine/workunit_store" }

[build-dependencies]
bindgen = "0.53.2"
cbindgen = "0.8.6"
walkdir = "2"
